styles.css
/* http://meyerweb.com/eric/tools/css/reset/  v2.0 | 
20110126   License: none (public domain) */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre, 
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/******   Header/Nav Bar  ******/

html{
    margin: 0;
    height: 100%;
}

body{
    font-family: quicksand; 
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    font-size: 1em;
    line-height: 1.75em;
}

h1, h2, h3, legend,
.mainHeader div p:first-child{
    font-family: pacifico;
}

.mainHeader{
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.mainHeader > div{
    flex-direction: row;
    vertical-align: middle;
    margin: 1em;
}

.mainHeader div p{
    flex-direction: row;
    vertical-align: middle;
    padding: 1em;
    display: inline-block;
    font-size: 1.2em;
    margin: 1em
}

.mainHeader div p:first-child{
    border-right: solid 1px black;
    margin-right: 0;
}

.mainHeader div p:nth-child(2){
    margin-left: 0;
}

/* .navul{
    display: none;
} */

/* .navOpen{
    display: flex;
} */

.mainnav .heroNav{
    padding:0;
    font-size: 1.3em;
    color: #FD9563;
    overflow: hidden;
    clear:both;
    display: flex;
}

.heroNav{
    width: 100%;
    display: flex;
    justify-content: flex-end;
    align-content: space-around;
    height: 4em;
    right: .5em;
    top: .75em;
    position: absolute;
    z-index: 9;
}

.mainnav{
    padding-right: 1em; 
}


.mainnav li,
.heroNav li{
    list-style: none;
    background-color: #51333B;
    color: #FD9563;
    padding: 10px 15px;
    display: inline-block;
    vertical-align: middle;
    justify-content: center;
}

a, a:visited{
    text-decoration: none;
    color: #FD9563;

}

li .current{
    border:#FD9563 2px solid;
    padding: 2px;
}




/******   INDEX.HTML  ******/

.hero{
    background-image: url("img/lifeGuardStand.jpg");
    height: 100%;
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    clear: both; 
    display: inline-block;
}

.hero div{
    text-align: center;
    position: absolute;
    background-size: contain;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
}

.hero div h1{
    font-family: pacifico;
    font-size: 3em;

}

.hero div h2{
    font-family: quicksand;
    border-bottom: none;
}



#indexp{
    display: block;
    padding: 1em 20% 1em 20%;
    font-family: quicksand;
    color: #FD9563;
    font-size: 1.5em;
    line-height: 1.75em;
}

/******   BIOGRAPHY.HTML  ******/

.biographyMain {
    display: flex;
}


#profile{
    max-width: 438px;
    max-height: 640px;
}

.biographyMain h1{
   font-size: 2em;
   line-height: 2.5em;
   margin-bottom: 1em;
   margin-left: 5%;
} 

.biographyMain section{
    display: flex;
    flex-direction: column;
    padding: 1em;
    height: 640px;
 } 

 .biographyMain section p {
    margin: 1% 5% 1%;
    font-size: 1.25em;
    line-height: 1.5em;
}

.biographyMain section p:nth-last-of-type(1) {
    margin-top: auto;
    padding-bottom: 2em;
}


/******   RESUME  ******/

#resumeMain{
    display: flex;
    flex-direction: row;
}

#resumeMain section h1,
h2{
    font-size: 2em;
    padding: .5em .5em .5em 0;
    margin: 1em 1em 1em 0;
    align-self: flex-start;
    border-bottom: solid 2px #FD9563;
}

h3{
    font-size: 1.5em;
    color: #51333B;
}

#resumeMain section{
    width: 60%;
    margin: 0 auto;
    background-color: white; 
    font-size: 1.1em;
}

#resumeMain section p{
    width: 80%;
    margin-right: .5em;
    margin-left: 20px;
    font-size: 1.25em;
}

#resumeMain ul{
 margin-top: 1.5em;
 margin-bottom: 2em;
 margin-left: 20px;
 font-size: 1.25em;
 line-height: 2em;
}

#resumeMain aside{
    width: 30%;
}

aside{
    display: inline-block;
    background-color: #9C9383;
}


aside h3,
aside ul{
    background-color: #51333B; 
    color: #FD9563;
    padding: 2em 2em 2em 1em;
    margin: 1em; 
    line-height: 2em;
}

aside h3{
    padding: 1em;
}

/******   GALLERY.HTML  ******/
.galleryMain {
    max-width: 100%;
    height: auto;
    display: flex;
    margin-top: 1em;
}

.galleryMain ul{
    margin-top: 2em;
    display: flex;
    flex-wrap: wrap; 
    justify-content: space-around;
    align-items: flex-start;
}

.galleryMain ul li,
.galleryMain ul li img {
    max-width: 500px;
    margin: 0;
}

.galleryMain ul li figcaption {
    max-width: 500px;
    padding: .5em;
    background-color: #51333B; 
    color: #FD9563;
    line-height: 1.5em;
    margin-bottom: 2em;
}


/******   PROJECTS.HTML  ******/

.projectsMain{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.projectsMain h3{
    font-size: 2em;
    padding: .5em;
    margin: 1em;
    align-self: flex-start;
    border-bottom: solid 2px #FD9563;
}

.projectsMain p{
    width: 80%;
    align-self: center;
    line-height: 1.5em;
    text-align: center;
}


.projectsMain ul{
    margin-top: 2em;
    display: flex;
    flex-wrap: wrap; 
    justify-content: space-around;
    align-items: flex-start;
}


.projectsMain ul li,
.projectsMain ul li img {
    max-width: 400px;
    margin: 0;

}

.projectsMain ul li figcaption {
    max-width: 400px;
    padding: .5em;
    background-color: #51333B; 
    color: #FD9563;
    line-height: 1.5em;
    margin-bottom: 2em;
}

/******   CONTACT.HTML  ******/

form{
    display: flex;
    flex-direction: column;
    margin: 2em;
    align-content: center;
    background-color: #9C9383;
    padding: 2em;
}

legend{
    margin-bottom: 1em;
    font-size: 2em;
    border-bottom: solid 2px #FD9563;
}

/* input:invalid {
    border-color: rgb(172, 0, 0);
    background-color: rgba(212, 69, 76, 0.541);
} */

form fieldset div,
textarea{
    max-width: 60%;
    padding: .5em 0;
}

textarea{
    margin: 1em 1em 1em 0;
}

.submit{
    width: 5em;
}

/******   FOOTER  ******/

footer{
    display: flex;
    flex-direction: column;
    /* justify-content: space-evenly;  */
    background-color: #51333B;
    padding: 2em auto;
    height: 8em;
    align-items: center;
    bottom: 0;
    left: 0;
    width: 100%;
    line-height: 1.5em;
    
}

.fixedFooter{
    bottom: 0;
    left: 0;
}

footer ul{
    padding: 3em auto;
    margin-top: 1em;
}

footer li{
    list-style: none;
    color: #FD9563;
    display: inline-block;
    padding: 0 .5em;
}

.roadToHireLogo{
    max-height: 14px;
    background-color: #FD9563;
    padding: 1px;
}





/******  MEDIA QUERIES ******/

@media only screen and (max-width: 1100px){
    
    /*BIOGRAPHY*/

    .biographyMain{
        flex-direction: column;
        justify-content: center;
    }

    .pictureOverlay {
        height: 300px;
        width: 300px;
        overflow: hidden;
        border-radius: 15%;
        justify-content: center;
        align-self: center;
    }

    .biographyMain img {
        align-self: center;
        /* clip-path: inset(10px 10px 200px 10px); */
        height: 420px;
        width: 300px;
        margin-top: -25px;
    }

    .biographyMain section p:nth-last-of-type(1) {
        margin-top: 2em;
    }

    /*RESUME*/
    
    #resumeMain{
        flex-direction: column;
    }

    #resumeMain section{
        width: 80%;
    }

    #resumeMain aside {
        justify-content: center;
        width: 100%;
    }
}





@media only screen and (max-width: 1010px){
    .overlay {
        height: 100vh;
        width: 100vw;
        position: fixed;
        z-index: 1;
        background: black;
        left: -100vw;
        top: 0;
        transition: 0.5s;
    }

    .menu-is-open {
        left: 0;
    }

    #clickMe {
        position: relative;
        z-index: 10;
    }

   .navul{
       display: flex;
       flex-direction: column;
       text-align: center;
    }   

   i{
        margin: 1em;
    }

      /*CONTACT*/
      fieldset div  {
        margin-bottom: 30px;
    }

    form fieldset div,
    textarea{
        max-width: 80%;
        padding: .5em 0;
    }
    
}




@media only screen and (max-width: 505px){

    #indexp{
        font-size: 1em;
        padding: 1em 4%;
    }

    main section h1{
        font-size: 1em;
        padding-bottom: 1em; 
    }

    .hero div {
        top: 65%;
    }

   
    footer{
        margin-top: 2em;
        max-height: 500px;
    }


    /*BIOGRAPHY*/

    .mainHeader div p, p{
        font-size: .75em;
    }

    main{
        flex-direction: column;
    }

    #profile{
        max-width: 100%;
        height: auto;
    }

    /*RESUME*/

    #resumeMain{
        flex-direction: column;
    }

    #resumeMain section{
        width: 90%;
    }

    #resumeMain section h1{
        max-width: 100%;
        margin: 1em auto;

    }

    #resumeMain section h2{
        max-width: 100%;
        margin: 1em 0;
        padding: 0;
        font-size: 1.9em;
    }

    #resumeMain section p{
        margin: 0;
        width: 90%;
    }
    #resumeMain section ul li,
    #resumeMain aside ul li{
        list-style-type: disc;
        margin: .5em;
        text-align: left;
    }

    #resumeMain aside{
        width: 100%;
        margin-bottom: 1em;
    }

    /*PROJECTS*/
    .projectsMain{
        margin-bottom: 4em;
    }

    .projectsMain ul li{
        max-width: 100%;
    }

    .projectsMain ul li figcaption{
        margin: 0 .5em 2em;
        padding-top: 0;
    }

     /*GALLERY*/ 

     .galleryMain ul li img {
        max-width: 100%;
     }


   

      /*FOOTER*/

      footer{
        margin: auto auto 0 auto;
        flex-direction: row;
      }

      .footerLinksUl {
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          margin-top: -15px ; 
          height: 128px;
          width: 46px;
      }

      .footerLinksLi {
        padding: 0;
        height: 20px;
        margin:0;
      }

      .roadToHireLogo {
        margin-left: 15px;
        margin-top: 10px;
      }


}


@media only screen and (min-width: 1011px){
 button{
     display: none;
 }

    }

